Fix missing background.

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   background-color: #c79393;
-  background-image: url('background.jpg');
+  background-image: url('assets/background.jpg');
   background-blend-mode: soft-light;
 
   font-synthesis: none;
